# aiueoServer

./: Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml
aiueoServer/: asgi.py  settings.py  urls.py  wsgi.py
chat/: consumers.py  models.py  routing.py  socketio_events.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_conversationparticipant_unique_together_and_more.py  0003_remove_friendrequest_chat_no_self_friend_and_more.py  0004_remove_friendrequest_chat_no_self_friend_and_more.py  0005_remove_friendrequest_chat_no_self_friend_and_more.py
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_table.py  0003_alter_user_table.py  0004_alter_user_table.py  0005_user_avatar_user_mobile.py  0006_alter_user_mobile.py  0007_alter_user_avatar.py  0008_user_created_at_user_updated_at.py  0009_user_state.py  0010_rename_id_user_user_id.py  0011_permission_role.py  0012_user_role.py  0013_role_created_at_role_updated_at.py  0014_role_role_desc.py  0015_rename_permissions_role_permission.py  0016_rename_permission_role_permission_id.py  0017_rename_permission_id_role_permission.py  0018_permission2.py  0019_permission_permission2.py  0020_caidan_caidan2.py  0021_alter_caidan_table_alter_caidan2_table.py  0022_alter_caidan_icon.py  0023_alter_permission_permission2.py  0024_role_permission2.py  0025_permission2_caidan2.py  0026_conversation_message_friendrequest_and_more.py  (+1 more)
utils/: create_signing_key.py  create_user.py  export_mysql.py  response.py  token.py  user.py
